welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: not found: value ||
  if((a<10)&&(b<10))||((a>20)&&(b>20)){
                    ^